# ai-research-content-generator

./: .env.example  .env.sample  .gitignore  README.md  linkedin_feedback_critique.py  linkedin_multi_agent_generator.py  linkedin_post_generator.py  linkedin_style_analyzer.py  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: development.chatmode.md  taskplanning.chatmode.md
agents/: __init__.py  feedback_agent.py  link_analysis_agent.py  multi_agent_generator.py  post_composition_agent.py  research_agent.py
input/: .gitkeep  instructions.txt  linkedin_style_prompt.txt  prompt.txt
posts/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  (+21 more)
