[project]
name = "linkedin-post-generator"
version = "1.0.0"
description = "AI-powered LinkedIn post generator that learns and replicates your writing style"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strands-agents[openai]>=1.4.0",
    "python-dotenv>=1.0.0",
    "strands-agents-tools>=0.2.3",
    "tavily-python>=0.7.10",
]


[tool.uv]
dev-dependencies = []
